--- a/assets/sass/components/_icon.scss
+++ b/assets/sass/components/_icon.scss
@@ -1,5 +1,5 @@
 ///
-/// Big Picture by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -8,12 +8,8 @@
 
 	.icon {
 		@include icon;
+		border-bottom: none;
 		position: relative;
-		text-decoration: none;
-
-		&:before {
-			line-height: inherit;
-		}
 
 		> .label {
 			display: none;
