--- a/assets/sass/components/_icons.scss
+++ b/assets/sass/components/_icons.scss
@@ -1,5 +1,5 @@
 ///
-/// Big Picture by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -8,17 +8,32 @@
 
 	ul.icons {
 		cursor: default;
+		list-style: none;
+		padding-left: 0;
 
 		li {
 			display: inline-block;
-		}
 
-		a {
-			display: inline-block;
-			width: 2em;
-			height: 2em;
-			line-height: 2em;
-			text-align: center;
-			border: 0;
+			&:last-child {
+				padding-right: 0;
+			}
+
+			.icon {
+				@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out');
+				width: 2.25rem;
+				height: 2.25rem;
+				text-align: center;
+				line-height: 2.25rem;
+				border-radius: 2.25rem;
+				display: inline-block;
+
+				&:before {
+					font-size: 1.25rem;
+				}
+
+				&:hover {
+					background-color: _palette(border-bg);
+				}
+			}
 		}
 	}
