--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,11 +3,12 @@
 @import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900');
-@import url('fontawesome-all.min.css');
+@import 'libs/html-grid';
+@import 'fontawesome-all.min.css';
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800');
 
 /*
-	Big Picture by HTML5 UP
+	Paradigm Shift by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -15,12 +16,13 @@
 // Breakpoints.
 
 	@include breakpoints((
-		xxlarge: ( 1681px,  1920px ),
-		xlarge:  ( 1281px,  1680px ),
-		large:   ( 1001px,  1280px ),
-		medium:  ( 737px,   1000px ),
-		small:   ( 481px,   736px  ),
-		xsmall:  ( null,    480px  )
+		default:   (1681px,   null     ),
+		xlarge:    (1281px,   1920px   ),
+		large:     (1153px,   1280px   ),
+		medium:    (737px,    1152px   ),
+		small:     (481px,    736px    ),
+		xsmall:    (361px,    480px    ),
+		xxsmall:   (null,     360px    )
 	));
 
 // Base.
@@ -31,6 +33,7 @@
 
 // Component.
 
+	@import 'components/row';
 	@import 'components/box';
 	@import 'components/button';
 	@import 'components/form';
@@ -39,72 +42,11 @@
 	@import 'components/list';
 	@import 'components/actions';
 	@import 'components/icons';
-	@import 'components/section';
 	@import 'components/table';
-	@import 'components/poptrox-popup';
+	@import 'components/arrow';
 	@import 'components/gallery';
+	@import 'components/feature-icons';
 
 // Layout.
 
-	@import 'layout/header';
-	@import 'layout/main';
-	@import 'layout/footer';
-
-/* Intro */
-
-	#intro {
-		background: url('images/overlay.png'), url('../../images/intro.jpg');
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, bottom center;
-		background-repeat: repeat, no-repeat;
-	}
-
-/* One */
-
-	#one {
-		background: url('images/overlay.png'), url('../../images/one.jpg');
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, center center;
-	}
-
-/* Two */
-
-	#two {
-		background: url('images/overlay.png'), url('../../images/two.jpg');
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, center center;
-	}
-
-/* Contact */
-
-	#contact {
-		overflow: hidden;
-		padding-bottom: 0;
-
-		.box {
-			@include vendor('transition', 'transform #{_duration(fade-in)} ease');
-			@include vendor('transform', 'translateY(0)');
-			position: relative;
-		}
-
-		&.inactive {
-			.box {
-				@include vendor('transform', 'translateY(100%)');
-			}
-		}
-
-		@include breakpoint('<=small') {
-			.box {
-				padding: 1.5em 1.5em 2em 1.5em;
-			}
-		}
-
-		@include breakpoint('<=xsmall') {
-			.box {
-				padding: 1em 1em 2em 1em;
-			}
-		}
-	}
+	@import 'layout/wrapper';
